styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');

body{
    width: 100%;
    margin: auto;
    font-family: 'Open Sans', sans-serif;
    font-size:18px;
}

h1, h2{
    font-family: 'Poppins', Arial;
}

button{
    border-radius: 20px;
    height: 30px;
    border: none;
}

a{
    color: white;
}

/* Added this because the icons would stretch due to flexbox*/
img{
    align-self: center;
}


.container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    
}

.sectionOne{
    background-image: url("images/bg-hero-desktop.svg");
    background-color: hsl(193, 100%, 96%);
    padding-bottom: 40px;
}

.header{
    display: flex;
    justify-content: space-between;
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.logo{
    width: 165px;
    height: 25px;
}

.oneContent{
    display: flex;
    flex-direction: row;
    justify-content: center;
    
}

.oneLeft{
    width: 30%;
    margin-right: 100px;
}

.secondCTA{
    width: 200px;
    height: 40px;
    color: white;
    background-color: hsl(322, 100%, 66%);
}

.mockups{
    width: 400px;
}

.sectionTwo{
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 6em;
    margin-bottom: 12em;
}

.benefitContainer{
    margin: 20px auto;
    width: 60%;
    height: 250px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    border: solid;
    border-color: rgb(232, 232, 232);
    border-radius: 10px;
    padding: 20px 20px 20px 40px;
}

.benefitText{
    width: 40%;
    margin-left: 5em;
}

.benefitText p{
    color: rgb(123, 123, 123);
}

.benefitImage{
    width: 300px;
    margin-right: 100px;
}


.footer{
    color: white;
    background-color: hsl(192, 100%, 9%);
    padding-top: 8em;
    padding-bottom: 4em;
   
}

.footerContentContainer{
    display: flex;
    flex-direction: row;
    margin: 0px 70px 0px 70px;
}

.ctaContainer{
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    position: absolute;
    padding: 2em;
    color: black;
    background-color: white;
    border-radius: 12px;
    width: 50%;
    transform: translate(0, -120%);
    box-shadow: 0 0 3px rgb(187, 187, 187);
    display: flex;
    flex-direction: column;
    align-items: center;
}


.footerLogo{
    margin-left: 3em;
}

.footerLeft, .footerMiddle{
    width: 35%;
}

.footerRight{
    width: 30%;
}

.location, .phoneNumber, .email{
    display: flex;
    flex-direction: row;
}

.locationIcon{
    align-self: flex-start;
    margin-top: 1.2em;
}

.locationIcon, .icon{
    margin-right: 1em;
}

.list{
    display: flex;
    flex-direction: column;
}

.footerMiddle{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.links{
    margin-bottom: 20px;
}

.socialMedia{
    margin-right: 1em;
}



.attribution {
    font-size: 11px;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

